# PipeCNN

./: .gitignore  CMakeLists.txt  README.md
documents/: README.md
project/: Makefile
project/host/: main.cpp
scripts/: transfModel.m
src/: CMakeLists.txt  layer_config.h  main.cpp
src/common/: hw_param.h
src/kernel/: conv_pipe.cl
